# Electric_vehicle

./: .gitignore  LICENSE  Makefile  Readme.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
app/: streamlit_app.py
notebooks/: 02_modeling.ipynb  03_forecasting.ipynb
src/: __init__.py  features.py  models.py  visualizations.py
tests/: test_api.py  test_models.py  test_preprocessing.py  test_visualizations.py
